--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link href="index.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
+
       <main>
         <h1>Search Drinks</h1>
           <form action="#" class="js-search-form">
@@ -25,6 +26,13 @@
           <div class="js-search-results">
             
           </div>
+
+        <div class="row">
+          <div class="column"></div>
+          <div class="column"></div>
+          <div class="column"></div>
+          <div class="column"></div>
+        </div> 
       </main>
       <script src="app.js"></script>
     </body>
