Sorted and returned the data in proper order

--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css" rel="stylesheet">
 
         <!-- JQuery Script -->
-        <script
-          src="https://code.jquery.com/jquery-3.2.1.min.js"
-          integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-          crossorigin="anonymous">
-          </script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
           <!-- Google Font -->
           <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
@@ -39,7 +35,6 @@
           </div>
       </header>
         <div class="row js-search-results">
-
         </div>
       <script src="app.js"></script>
     </body>
